// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`with showDestroy renders correctly 1`] = `
<div
  cellHeight={360}
  className="MuiGrid-container-1 MuiGrid-spacing-xs-8-22"
>
  <div
    className="MuiGrid-item-2 MuiGrid-grid-xs-6-33"
  >
    <div
      className="Ratio "
      style={
        Object {
          "display": "block",
          "overflow": "hidden ",
        }
      }
    >
      <div
        className="Ratio-ratio "
        style={
          Object {
            "height": 0,
            "paddingTop": "66.66666666666667%",
            "position": "relative",
            "width": "100%",
          }
        }
      >
        <div
          className="Ratio-content "
          style={
            Object {
              "height": "100%",
              "left": 0,
              "position": "absolute",
              "top": 0,
              "width": "100%",
            }
          }
        >
          <div
            to="/undefined"
          >
            Link - 
            <img
              alt={undefined}
              src={undefined}
              style={
                Object {
                  "width": "100%",
                }
              }
            />
          </div>
          <div
            style={
              Object {
                "background": "rgba(0, 0, 0, 0.6)",
                "bottom": 0,
                "color": "white",
                "height": 90,
                "left": 0,
                "padding": 20,
                "position": "absolute",
                "right": 0,
              }
            }
          >
            <div
              style={
                Object {
                  "float": "left",
                }
              }
            >
              <div
                style={
                  Object {
                    "color": "white",
                    "display": "block",
                    "textDecoration": "none",
                  }
                }
                to="/undefined"
              >
                Link - 
                <h3
                  className="MuiTypography-root-92 MuiTypography-subheading-99 MuiTypography-colorInherit-111"
                />
              </div>
            </div>
            <div
              style={
                Object {
                  "float": "right",
                }
              }
            >
              <div
                destroying={true}
                id={11111}
                parentId={123}
              >
                Destroy - 
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="MuiGrid-item-2 MuiGrid-grid-xs-6-33"
  >
    <div
      className="Ratio "
      style={
        Object {
          "display": "block",
          "overflow": "hidden ",
        }
      }
    >
      <div
        className="Ratio-ratio "
        style={
          Object {
            "height": 0,
            "paddingTop": "66.66666666666667%",
            "position": "relative",
            "width": "100%",
          }
        }
      >
        <div
          className="Ratio-content "
          style={
            Object {
              "height": "100%",
              "left": 0,
              "position": "absolute",
              "top": 0,
              "width": "100%",
            }
          }
        >
          <div
            to="/undefined"
          >
            Link - 
            <img
              alt={undefined}
              src={undefined}
              style={
                Object {
                  "width": "100%",
                }
              }
            />
          </div>
          <div
            style={
              Object {
                "background": "rgba(0, 0, 0, 0.6)",
                "bottom": 0,
                "color": "white",
                "height": 90,
                "left": 0,
                "padding": 20,
                "position": "absolute",
                "right": 0,
              }
            }
          >
            <div
              style={
                Object {
                  "float": "left",
                }
              }
            >
              <div
                style={
                  Object {
                    "color": "white",
                    "display": "block",
                    "textDecoration": "none",
                  }
                }
                to="/undefined"
              >
                Link - 
                <h3
                  className="MuiTypography-root-92 MuiTypography-subheading-99 MuiTypography-colorInherit-111"
                />
              </div>
            </div>
            <div
              style={
                Object {
                  "float": "right",
                }
              }
            >
              <div
                destroying={false}
                id={22222}
                parentId={123}
              >
                Destroy - 
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`without showDestroy renders correctly 1`] = `
<div
  cellHeight={360}
  className="MuiGrid-container-1 MuiGrid-spacing-xs-8-22"
>
  <div
    className="MuiGrid-item-2 MuiGrid-grid-xs-6-33"
  >
    <div
      className="Ratio "
      style={
        Object {
          "display": "block",
          "overflow": "hidden ",
        }
      }
    >
      <div
        className="Ratio-ratio "
        style={
          Object {
            "height": 0,
            "paddingTop": "66.66666666666667%",
            "position": "relative",
            "width": "100%",
          }
        }
      >
        <div
          className="Ratio-content "
          style={
            Object {
              "height": "100%",
              "left": 0,
              "position": "absolute",
              "top": 0,
              "width": "100%",
            }
          }
        >
          <div
            to="/undefined"
          >
            Link - 
            <img
              alt={undefined}
              src={undefined}
              style={
                Object {
                  "width": "100%",
                }
              }
            />
          </div>
          <div
            style={
              Object {
                "background": "rgba(0, 0, 0, 0.6)",
                "bottom": 0,
                "color": "white",
                "height": 90,
                "left": 0,
                "padding": 20,
                "position": "absolute",
                "right": 0,
              }
            }
          >
            <div
              style={
                Object {
                  "float": "left",
                }
              }
            >
              <div
                style={
                  Object {
                    "color": "white",
                    "display": "block",
                    "textDecoration": "none",
                  }
                }
                to="/undefined"
              >
                Link - 
                <h3
                  className="MuiTypography-root-92 MuiTypography-subheading-99 MuiTypography-colorInherit-111"
                />
              </div>
            </div>
            <div
              style={
                Object {
                  "float": "right",
                }
              }
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="MuiGrid-item-2 MuiGrid-grid-xs-6-33"
  >
    <div
      className="Ratio "
      style={
        Object {
          "display": "block",
          "overflow": "hidden ",
        }
      }
    >
      <div
        className="Ratio-ratio "
        style={
          Object {
            "height": 0,
            "paddingTop": "66.66666666666667%",
            "position": "relative",
            "width": "100%",
          }
        }
      >
        <div
          className="Ratio-content "
          style={
            Object {
              "height": "100%",
              "left": 0,
              "position": "absolute",
              "top": 0,
              "width": "100%",
            }
          }
        >
          <div
            to="/undefined"
          >
            Link - 
            <img
              alt={undefined}
              src={undefined}
              style={
                Object {
                  "width": "100%",
                }
              }
            />
          </div>
          <div
            style={
              Object {
                "background": "rgba(0, 0, 0, 0.6)",
                "bottom": 0,
                "color": "white",
                "height": 90,
                "left": 0,
                "padding": 20,
                "position": "absolute",
                "right": 0,
              }
            }
          >
            <div
              style={
                Object {
                  "float": "left",
                }
              }
            >
              <div
                style={
                  Object {
                    "color": "white",
                    "display": "block",
                    "textDecoration": "none",
                  }
                }
                to="/undefined"
              >
                Link - 
                <h3
                  className="MuiTypography-root-92 MuiTypography-subheading-99 MuiTypography-colorInherit-111"
                />
              </div>
            </div>
            <div
              style={
                Object {
                  "float": "right",
                }
              }
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
